Revision history for Perl extension AnyEvent.

	- speed up AnyEvent::Socket::format_address and ::format_ipv6.
        - the AnyEvent::Util::fh_nonblocking function worked only
          by lucky accident on win32.
        - smaller and faster AnyEvent::Util::fh_nonblocking.
        - when the (required!) Time::HiRes module is missing, AnyEvent
          did not fall back to built-in time properly.
        - do not load Fcntl at runtime, saving memory and loading time.
        - precompile a number of constants and use them instead of runtime
          detection and eval.
        - free detection code after detection and similar memory optimisations.
        - Perl backend timer interval best effort drift has been improved
          (ame algorithm as EV).

5.24  Tue Jan  5 11:39:43 CET 2010
	- cygwin never reports errors from failed connects. 1.5 just gives
          you continous readyness and EAGAIN, 1.7 is even more broken and
          just hangs. work around both issues in a cygwin-specific hack.
	- improve idle watcher documentation slightly.

5.23  Sun Dec 20 23:48:00 CET 2009
	- support IDNs in resolve_sockaddr, and therefore in tcp_connect.
        - implement punycode_encode/decode, idn_nameprep,
          idn_to_ascii and idn_to_unicode operations in AnyEvent::Util.
	- provide $AE::VERSION.
        - removed traces of "no strict 'refs'".

5.22  Sat Dec  5 03:51:13 CET 2009
	- downgrade-or-fail in AnyEvent::Handle::push_write, to
          diagnose encoding failures earlier and more succinctly.
          (this works around bugs in perl, throwing away encoding info
          when passing scalar data to extensions).
        - add more examples to AnyEvent::Socket manpage.
        - upgrade internal warning set to the same as common::sense 2.03.
        - use pack "n/a*" for pre-5.8.9 perl compatibility in AnyEvent::DNS
          (John Beppu).
        - AnyEvent::Socket::inet_aton now properly supports ipv6, as documented.